XMLtoCSV/objects/unpackaged/objects/PCYC_JBI_Call__c.object
<CustomObject>
    <description>Staging JBI Call records.</description>
    <fields>
        <fullName>PCYC_Account_vod__c</fullName>
        <description>Account Id)</description>
        <label>Account</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Address_Line_1_vod__c</fullName>
        <description>Address Line 1 of the Call Address. This field should not be displayed on the Page Layout.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Address_Line_2_vod__c</fullName>
        <description>Address Line 2 of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Date_vod__c</fullName>
        <description>The date of the call when it was first saved or submitted. This field is set via a trigger to the current date if neither the date or datetime field is supplied.</description>
        <label>Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Datetime_vod__c</fullName>
        <description>The time when the rep specified for the call unless the call was signed, in which case this is the signature time.  This field is optional for users who which to plan their calls down to a specific hour or minute.  If a datetime is specified, a corresponding salesforce.com event is created via a trigger for calendar integration.</description>
        <label>Datetime</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Source__c</fullName>
        <description>Call Source.</description>
        <label>Call Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Type_vod__c</fullName>
        <description>Call Type.</description>
        <label>Call Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_City_vod__c</fullName>
        <description>City of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Del_Flg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Flag, default flase.</description>
        <label>Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Error_Messages__c</fullName>
        <inlineHelpText>Error Messages if any</inlineHelpText>
        <label>Error Messages</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Call ( JBI Call record Id)</description>
        <externalId>true</externalId>
        <label>JBI Call Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Email__c</fullName>
        <label>JBI Rep Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Name__c</fullName>
        <label>JBI Rep Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Phone__c</fullName>
        <label>JBI Rep Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Status__c</fullName>
        <label>JBI Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_TerritoryId__c</fullName>
        <label>JBI TerritoryId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Load_Status__c</fullName>
        <defaultValue>&quot;Staged&quot;</defaultValue>
        <description>status.</description>
        <label>Load Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Flag__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>MSL Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Planned_Saved_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSL Planned Saved Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_RecordTypeId__c</fullName>
        <description>Record Type</description>
        <label>Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_State_vod__c</fullName>
        <description>State of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Status_vod__c</fullName>
        <description>status.</description>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Zip_vod__c</fullName>
        <description>Zip Code of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Staging JBI Call</label>
    <nameField>
        <label>JBI Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging JBI Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>